admission/validatingAdmissionPolicies/policies/hostports/ephemeralcontainers/binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: allowed-hostports-ephemeralcontainers-namespace-optout-warn-pss
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 96b1f79e-7c21-58cb-96c2-8d23d0dc330a
  labels:
    allowed-hostports-ephemeralcontainers.security.kolteq.com/warn: 'false,true'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    allowed-hostports-ephemeralcontainers.security.kolteq.com/audit: 'false,true'
    allowed-hostports-ephemeralcontainers.security.kolteq.com/enforce: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: allowed-hostports-ephemeralcontainers
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/warn
        operator: In
        values:
        - baseline
        - restricted
      - key: allowed-hostports-ephemeralcontainers.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: allowed-hostports-ephemeralcontainers-namespace-optout-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 96b1f79e-7c21-58cb-96c2-8d23d0dc330a
  labels:
    allowed-hostports-ephemeralcontainers.security.kolteq.com/warn: 'false,true'
    security.kolteq.com/warn: enabled
    allowed-hostports-ephemeralcontainers.security.kolteq.com/audit: 'false,true'
    allowed-hostports-ephemeralcontainers.security.kolteq.com/enforce: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
spec:
  policyName: allowed-hostports-ephemeralcontainers
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/warn
        operator: In
        values:
        - enabled
      - key: allowed-hostports-ephemeralcontainers.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: allowed-hostports-ephemeralcontainers-namespace-optin-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 96b1f79e-7c21-58cb-96c2-8d23d0dc330a
  labels:
    allowed-hostports-ephemeralcontainers.security.kolteq.com/warn: 'false,true'
    allowed-hostports-ephemeralcontainers.security.kolteq.com/audit: 'false,true'
    allowed-hostports-ephemeralcontainers.security.kolteq.com/enforce: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: allowed-hostports-ephemeralcontainers
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: allowed-hostports-ephemeralcontainers.security.kolteq.com/warn
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: allowed-hostports-ephemeralcontainers-namespace-optout-audit-pss
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 96b1f79e-7c21-58cb-96c2-8d23d0dc330a
  labels:
    allowed-hostports-ephemeralcontainers.security.kolteq.com/audit: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    allowed-hostports-ephemeralcontainers.security.kolteq.com/enforce: 'false,true'
    allowed-hostports-ephemeralcontainers.security.kolteq.com/warn: 'false,true'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: allowed-hostports-ephemeralcontainers
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/audit
        operator: In
        values:
        - baseline
        - restricted
      - key: allowed-hostports-ephemeralcontainers.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: allowed-hostports-ephemeralcontainers-namespace-optout-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 96b1f79e-7c21-58cb-96c2-8d23d0dc330a
  labels:
    allowed-hostports-ephemeralcontainers.security.kolteq.com/audit: 'false,true'
    security.kolteq.com/audit: enabled
    allowed-hostports-ephemeralcontainers.security.kolteq.com/enforce: 'false,true'
    allowed-hostports-ephemeralcontainers.security.kolteq.com/warn: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: allowed-hostports-ephemeralcontainers
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/audit
        operator: In
        values:
        - enabled
      - key: allowed-hostports-ephemeralcontainers.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: allowed-hostports-ephemeralcontainers-namespace-optin-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 96b1f79e-7c21-58cb-96c2-8d23d0dc330a
  labels:
    allowed-hostports-ephemeralcontainers.security.kolteq.com/audit: 'false,true'
    allowed-hostports-ephemeralcontainers.security.kolteq.com/enforce: 'false,true'
    allowed-hostports-ephemeralcontainers.security.kolteq.com/warn: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: allowed-hostports-ephemeralcontainers
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: allowed-hostports-ephemeralcontainers.security.kolteq.com/audit
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: allowed-hostports-ephemeralcontainers-namespace-optout-deny-pss
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 96b1f79e-7c21-58cb-96c2-8d23d0dc330a
  labels:
    allowed-hostports-ephemeralcontainers.security.kolteq.com/enforce: 'false,true'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    allowed-hostports-ephemeralcontainers.security.kolteq.com/audit: 'false,true'
    allowed-hostports-ephemeralcontainers.security.kolteq.com/warn: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: allowed-hostports-ephemeralcontainers
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/enforce
        operator: In
        values:
        - baseline
        - restricted
      - key: allowed-hostports-ephemeralcontainers.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: allowed-hostports-ephemeralcontainers-namespace-optout-deny
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 96b1f79e-7c21-58cb-96c2-8d23d0dc330a
  labels:
    allowed-hostports-ephemeralcontainers.security.kolteq.com/enforce: 'false,true'
    security.kolteq.com/enforce: enabled
    allowed-hostports-ephemeralcontainers.security.kolteq.com/audit: 'false,true'
    allowed-hostports-ephemeralcontainers.security.kolteq.com/warn: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: allowed-hostports-ephemeralcontainers
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/enforce
        operator: In
        values:
        - enabled
      - key: allowed-hostports-ephemeralcontainers.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: allowed-hostports-ephemeralcontainers-namespace-optin-deny
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 96b1f79e-7c21-58cb-96c2-8d23d0dc330a
  labels:
    allowed-hostports-ephemeralcontainers.security.kolteq.com/enforce: 'false,true'
    allowed-hostports-ephemeralcontainers.security.kolteq.com/audit: 'false,true'
    allowed-hostports-ephemeralcontainers.security.kolteq.com/warn: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: allowed-hostports-ephemeralcontainers
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: allowed-hostports-ephemeralcontainers.security.kolteq.com/enforce
        operator: In
        values:
        - 'true'
