admission/validatingAdmissionPolicies/policies/hostports/ephemeralcontainers/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: allowed-hostports-ephemeralcontainers
  annotations:
    security.kubeapt.io/displayName: Hostports
    security.kubeapt.io/description: ValidatingAdmissionPolicy for hostports/ephemeralcontainers.
    security.kubeapt.io/resource: Ephemeralcontainers
    security.kubeapt.io/severity: medium
    security.kubeapt.io/remediation: Adjust workloads to satisfy the hostports/ephemeralcontainers policy.
    policies.kolteq.com/validatingAdmissionPolicy: 96b1f79e-7c21-58cb-96c2-8d23d0dc330a
  labels:
    allowed-hostports-ephemeralcontainers.security.kolteq.com/audit: 'false,true'
    allowed-hostports-ephemeralcontainers.security.kolteq.com/enforce: 'false,true'
    allowed-hostports-ephemeralcontainers.security.kolteq.com/warn: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE","UPDATE"]
        resources: ["pods/ephemeralcontainers"]
  variables:
    - name: allowedHostPorts
      # expression: >
      #   [22, 80, 443]
      expression: >
        []
  validations:
    - expression: >
        !has(object.spec.ephemeralContainers) ||
        object.spec.ephemeralContainers.all(ec,
          !has(ec.ports) ||
          ec.ports.all(p,
            !has(p.hostPort) ||
            p.hostPort == 0 ||
            variables.allowedHostPorts.exists(h, h == p.hostPort)
          )
        )
      message: >
        Ephemeral container hostPort must be undefined, 0, or in the variables.allowedHostPorts list.
